<resources>
    <string name="app_name">ACTIVITY_ENTRY_NAME</string>
    <string name="paysdk_action_settings">Settings</string>
    <string name="paysdk_title_activity_android_pay">快速充值</string>
    <string name="paysdk_title_activity_android_pay_success">支付成功</string>
    <string name="paysdk_title_activity_android_pay_fail">支付失败</string>
    <string name="paysdk_title_activity_android_pay_qa">常见问题</string>
    <string name="paysdk_button_activity_android_gopay">继续充值</string>
    <string name="paysdk_button_activity_android_qa">常见问题</string>
    <string name="paysdk_button_activity_android_goback_game">返回游戏</string>
    <string name="paysdk_button_activity_android_repay">重新支付</string>
    <string name="paysdk_app_name">畅游支付</string>
    <string name="notice">提示</string>
    <string name="exit_sure">網絡連線發生問題，請確認並再試一次</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="dk_app_name">多酷游戏</string>
    <string name="dk_find_wd"><u>找回密码</u></string>
    <string name="dk_remember_login_state">记住登录状态</string>
    <string name="dk_account">账号（手机号/用户名）</string>
    <string name="dk_password">密码</string>
    <string name="dk_login">登录</string>
    <string name="dk_free_register">免费注册</string>
    <string name="dk_login_with_baidu_account">使用百度账号登录</string>
    <string name="dk_login_with_duoku_account">百度多酷用户登录</string>
    <string name="dk_userregister_progress">信息提交中，请稍候！</string>
    <string name="dk_user_register_nameerror">请输入正确的用户名（4-14位字母或数字）</string>
    <string name="dk_user_pwd_null">密码不能为空！</string>
    <string name="dk_user_pwd_error">密码输入不符合规范，请重新输入！</string>
    <string name="dk_userlogin_progress">登录中...</string>
    <string name="dk_user_login_sucess">登录成功</string>
    <string name="dk_user_requesterror_net_timeout">网络超时，请稍候重试！</string>
    <string name="dk_user_requesterror_server_dead">网络异常，请稍候重试！</string>
    <string name="dk_user_requesterror_net_dead">网络异常，请稍候重试！</string>
    <string name="dk_user_login_usernotexist">请输入正确的用户名或手机号！</string>
    <string name="dk_user_login_pwderror">请输入正确的密码！</string>
    <string name="dk_user_loginbaidu_namepwd_null">用户名，密码不能为空！</string>
    <string name="dk_user_register_licence_hint_ok">注册前请先同意《注册协议》！</string>
    <string name="dk_user_register_phonenum">您输入的用户名可能为手机号，请使用手机一键注册！</string>
    <string name="dk_user_register_success">注册请求已发送，请查收短信！</string>
    <string name="dk_user_register_fail1">注册失败！请确保网络连接正常！</string>
    <string name="dk_user_register_fail2">注册失败！请确保手机卡通信正常！</string>
    <string name="dk_userregister_phonenum_progress">手机号码注册中，请稍候！</string>
    <string name="dk_confirm">确定</string>
    <string name="dk_cancel">取消</string>
    <string name="dk_userregister_success_1">注册成功！</string>
    <string name="dk_user_register_name_exit">用户名已存在！</string>
    <string name="dk_user_request_fail">请求失败，请稍候重试！</string>
    <string name="dk_text_register_licence">注册服务协议</string>
    <string name="dk_userlogin_forgetpwd_confirm_nobind">拨打客服找回</string>
    <string name="dk_userlogin_forgetpwd_confirm">找回密码</string>
    <string name="dk_user_login_name_null">账号不能为空！</string>
    <string name="dk_user_thirdparty_login_failure">登录失败，请稍后再试！</string>
    <string name="dk_logining">正在登录...</string>
    <string name="dk_thirdparty_login_failure">网络异常，请稍后重试!</string>
    <string name="dk_bdlogin_error_tip_inputusername">请输入用户名！</string>
    <string name="dk_bdlgoin_error_tip_inputpassword">请输入密码！</string>
    <string name="dk_bdlogin_error_tip_inputverifycode">请输入验证码！</string>
    <string name="dk_account_error">请输入正确的用户名/手机号！</string>
    <string name="dk_account_null">请输入账号</string>
    <string name="dk_pwd_error">请输入6-16位字母或数字!</string>
    <string name="dk_pwd_null">请输入密码!</string>
    <string name="dk_verifycode_error">验证码错误，请重新输入！</string>
    <string name="dk_verifycode_null">请输入验证码！</string>
    <string name="dk_username_error">请输入4-14位字母或数字!</string>
    <string name="dk_username_null">请输入用户名或手机号！</string>
    <string name="dk_username_cover">用户名已被人抢注了，我们猜您可能也喜欢:</string>
    <string name="dk_username_digit_11">用户名不支持11位首字母为1的纯数字,请重新输入</string>
    <string name="dk_password_rule_error">请输入符合要求的密码，6-16位字母或数字！</string>
    <string name="dk_password_null">请输入密码！</string>
    <string name="dk_null_check">注册前请先同意《注册服务协议》！</string>
    <string name="dk_pre_pwd_error">请输入正确的原密码!</string>
    <string name="dk_pre_pwd_null">请输入原密码!</string>
    <string name="dk_new_pwd_rule_error">请输入6-16位字母或数字的新密码！</string>
    <string name="dk_new_pwd_null">请输入新密码!</string>
    <string name="dk_check_pwd_null">请输入确认新密码！</string>
    <string name="dk_new_pwd_check_error">请检查两次新密码输入是否一致！</string>
    <string name="dk_phonenum_rule_error">请输入真实的手机号码!</string>
    <string name="dk_phonenum_null">请输入手机号！</string>
    <string name="dk_phonenum_had_bind">该手机号码已绑定，请输入其他手机号码!</string>
    <string name="dk_modify_nickname_interval_less_15days">距离上次修改还不足十五天哦！</string>
    <string name="dk_bdpwd_error">请输入正确的密码！</string>
    <string name="dk_bdverifycode_error">获取验证码失败，请重试！</string>
    <string name="dk_username_or_pwd_error">用户名或密码错误，请重试！</string>
    <string name="dk_login_failed_and_try_later">登录失败，请稍候重试!</string>
    <string name="dk_xinlang_weibo_progress_info">请稍候</string>
    <string name="dk_baidu_account_error">请输入正确的用户名！</string>
    <string name="dk_login_ing">登录中...</string>
    <string name="dk_login_success">登录成功</string>
    <string name="dk_register_username_hint">4-14个字母或数字</string>
    <string name="dk_register_pwd_hint">6-16个字母或数字</string>
    <string name="dk_register_agreement_hint">同意</string>
    <string name="dk_register_licence">《注册协议》</string>
    <string name="dk_btn_string_bind_phone">绑定手机</string>
    <string name="dk_btn_string_modify_phone">修改绑定</string>
    <string name="dk_btn_string_modify_pwd">修改密码</string>
    <string name="dk_show_passord">显示密码</string>
    <string name="dk_btn_string_get_verify_code">获取验证码</string>
    <string name="dk_tv_string_verifycode">验证码</string>
    <string name="dk_et_string_verifycode_hint">请输入验证码</string>
    <string name="dk_btn_commit">提交</string>
    <string name="dk_tv_string_cur_bind_phone">您目前绑定的手机号码:</string>
    <string name="dk_tv_string_pre_bind_phone">原手机号</string>
    <string name="dk_btn_next_step">下一步</string>
    <string name="dk_tv_string_new_phone">新手机号</string>
    <string name="dk_btn_string_complete">完成</string>
    <string name="dk_tv_string_pre_pwd">原密码</string>
    <string name="dk_tv_pre_pwd_input">请输入原密码</string>
    <string name="dk_et_string_pwd_rule">6-16位字母或数字</string>
    <string name="dk_tv_string_new_pwd">新密码</string>
    <string name="dk_tv_string_confire_new_pwd">确认新密码</string>
    <string name="dk_btn_string_confire_modify_pwd">确认修改</string>
    <string name="dk_tv_string_loading">加载中...</string>
    <string name="dk_tv_string_account_input">请输入您的账号</string>
    <string name="dk_et_string_account_or_phone">用户名或手机号</string>
    <string name="dk_tv_string_login_with_bd_account">百度账号登录</string>
    <string name="dk_btn_string_change_verify_code">换一张</string>
    <string name="dk_tv_string_register_service_lease">多酷注册服务协议</string>
    <string name="dk_btn_string_i_know">我知道了</string>
    <string name="dk_tv_string_req_bind_msg">您尚未绑定手机，忘记密码时将无法通过手机找回密码！</string>
    <string name="dk_btn_string_bind_now">立即绑定</string>
    <string name="dk_btn_string_bind_later">以后绑定</string>
    <string name="dk_tv_string_tip">温馨提示：</string>
    <string name="dk_tv_string_req_bind_phone_tip_1">1、手机号码仅作为账户凭证，不会收取任何费用。</string>
    <string name="dk_tv_string_req_bind_phone_tip_2">2、我们承诺保障您的隐私权益，不会泄漏您的手机号码。</string>
    <string name="dk_loading">正在登录</string>
    <string name="dk_find_pwd_hint">请输入用户名/手机号</string>
    <string name="dk_welcome_to_reg_duoku">欢迎注册百度多酷</string>
    <string name="dk_account_text">账号</string>
    <string name="dk_register_now">立即注册</string>
    <string name="dk_register_phone">手机号一键注册</string>
    <string name="dk_bd_platform">百度旗下移动娱乐平台</string>
    <string name="dk_login_duoku_title_text">多酷用户登录</string>
    <string name="dk_account_hint">请输入用户名/手机号</string>
    <string name="dk_account_bd_hint">请输入用户名</string>
    <string name="dk_pwd_login_hint">请输入密码</string>
    <string name="dk_forget_pwd_text">忘记密码？</string>
    <string name="dk_account_manager_title_text">账户管理</string>
    <string name="dk_account_with_colon">账户：</string>
    <string name="dk_phone_with_colon">手机：</string>
    <string name="dk_account_logout">注销</string>
    <string name="dk_bind_phone_hint_1st">为了您的账号安全，请尽快绑定手机</string>
    <string name="dk_bind_phone_hint_2nd">1、直接用手机号登录，更方便</string>
    <string name="dk_bind_phone_hint_3rd">2、手机找回密码，更安全</string>
    <string name="dk_account_manager_phone">手机号</string>
    <string name="dk_account_manager_phone_hint">请输入手机号</string>
    <string name="dk_account_manager_phone_new_hint">请输入新手机号</string>
    <string name="dk_get_verify_code_again">再次获取</string>
    <string name="dk_register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="dk_net_error">网络异常，请重新登录！</string>
    <string name="dk_need_relogin">登录状态已失效，请重新登录！</string>
    <string name="dk_default_game_name">多酷游戏</string>
    <string name="dk_staus_bar_start">开始下载</string>
    <string name="dk_staus_bar_complete">下载完成</string>
    <string name="dk_staus_bar_failure">下载失败</string>
    <string name="dk_staus_bar_failure_retry">下载失败,请重启游戏后继续下载。</string>
    <string name="dk_staus_bar_complete_toinstall">下载完成,点击安装。</string>
    <string name="dk_pay_centre">多酷支付中心</string>
    <string name="dk_pay_by_game_card">游戏卡支付</string>
    <string name="dk_pay_mode_select">请选择支付方式</string>
    <string name="dk_recharge_card">充值卡</string>
    <string name="dk_pay_card">支付宝</string>
    <string name="dk_bank_card">银行卡</string>
    <string name="dk_wealth_card">财付通</string>
    <string name="dk_game_card">游戏卡</string>
    <string name="dk_money_payable">应付金额：</string>
    <string name="dk_current_account">当前账户：</string>
    <string name="dk_kubi_balance">酷币余额：</string>
    <string name="dk_merchandise_name">商品名称：</string>
    <string name="dk_ku_bi_exchange">酷币兑换</string>
    <string name="dk_ku_bi_payment">酷币支付</string>
    <string name="dk_payment_notice">公告</string>
    <string name="dk_btn_string_pay">支付</string>
    <string name="dk_btn_gold_coin">金币</string>
    <string name="dk_btn_string_exchange">兑换</string>
    <string name="dk_btn_string_repay">重新支付</string>
    <string name="dk_btn_string_back">返回游戏</string>
    <string name="dk_btn_string_check_network">检查网络</string>
    <string name="dk_current_consume">本次消费金额：</string>
    <string name="dk_tip_current_amount">本次支付金额：</string>
    <string name="dk_last_pay_mode">推荐支付方式</string>
    <string name="dk_other_pay_mode">其他支付方式</string>
    <string name="dk_last_recharge_mode">上次充值方式</string>
    <string name="dk_other_recharge_mode">其他充值方式</string>
    <string name="dk_customer_service_title">客服:</string>
    <string name="dk_customer_service_number">4000-826-898</string>
    <string name="dk_select_card_amount">请选择移动卡面额：</string>
    <string name="dk_tip_card_info_title">温馨提示:</string>
    <string name="dk_tip_exchange_amount">请填写兑换数量</string>
    <string name="dk_tip_exchange_gold_amount">请输入兑换%s的数量！</string>
    <string name="dk_tip_exchange_gold_number">请输入正确的%s数量！</string>
    <string name="dk_tip_exchange_gold_success">%s成功，到账</string>
    <string name="dk_tip_exchange_amount_most">最多能兑换%s</string>
    <string name="dk_tip_exchange_rate">(1酷币=%s</string>
    <string name="dk_tip_exchange_fail">兑换失败！</string>
    <string name="dk_tip_game_card_please_select">请选择%s面额:</string>
    <string name="dk_tip_payment_fail">支付失败！</string>
    <string name="dk_tip_payment_success">支付成功！</string>
    <string name="dk_tip_input_card_number">请输入卡号</string>
    <string name="dk_tip_input_card_password">请输入密码</string>
    <string name="dk_tip_card_number">%s位</string>
</resources>